--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "author": "Matheus das Mercês",
   "license": "ISC",
   "devDependencies": {
+    "serverless": "^1.49.0",
+    "serverless-offline": "^5.10.1",
     "serverless-plugin-warmup": "^4.7.0-rc.1"
   },
   "dependencies": {
     "aws-sdk": "^2.507.0",
     "axios": "^0.19.0",
+    "bcrypt-nodejs": "0.0.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0"
   }
 }
