--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.507.0",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
+    "dialogflow": "^0.10.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0"
   }
