Adicionando projectid como variavel de ambiente

--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ provider:
     SERVERLESS_SERVICE: ${self:service}
     STAGE: ${self:provider.stage}
     GOOGLE_APPLICATION_CREDENTIALS: "./src/credentials/google.json"
+    DIALOGFLOW_PROJECT_ID: translate-2-kgnsoy
   iamRoleStatements:
   - Effect: Allow
     Action:
