--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serverless-plugin-warmup": "^4.7.0-rc.1"
   },
   "dependencies": {
+    "@google-cloud/translate": "^4.1.3",
     "aws-sdk": "^2.507.0",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
