Fix last commit

--- a/serverless.yml
+++ b/serverless.yml
@@ -28,7 +28,8 @@ provider:
     STAGE: ${self:provider.stage}
     GOOGLE_APPLICATION_CREDENTIALS: "./src/credentials/google.json"
     DIALOGFLOW_PROJECT_ID: translate-2-kgnsoy
-    GOOGLE_MAPS_KEY: AIzaSyA1UUQgbp4x8tOCw6_YhUkfgJj5-dfxkhU
+    GOOGLE_PLACES_KEY: AIzaSyA1UUQgbp4x8tOCw6_YhUkfgJj5-dfxkhU
+    GOOGLE_MAPS_KEY: AIzaSyCbhJQ9YTC73K1hRq0vH6fGkwBnW0BjeYc
   iamRoleStatements:
   - Effect: Allow
     Action:
