--- a/src/dynamodb.yml
+++ b/src/dynamodb.yml
@@ -50,4 +50,17 @@ Resources:
           KeyType: HASH
       ProvisionedThroughput:
         ReadCapacityUnits: 1
-        WriteCapacityUnits: 1        
+        WriteCapacityUnits: 1
+  timeline:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-user-timeline
+      AttributeDefinitions:
+        - AttributeName: email
+          AttributeType: S               
+      KeySchema:
+        - AttributeName: email
+          KeyType: HASH
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1                 
