Build final telegram channel with typing and response

--- a/serverless.yml
+++ b/serverless.yml
@@ -30,7 +30,8 @@ provider:
     DIALOGFLOW_PROJECT_ID: translate-2-kgnsoy
     GOOGLE_PLACES_KEY: AIzaSyA1UUQgbp4x8tOCw6_YhUkfgJj5-dfxkhU
     GOOGLE_MAPS_KEY: AIzaSyCbhJQ9YTC73K1hRq0vH6fGkwBnW0BjeYc
-    SPOTS_PER_DAY: 8
+    TELEGRAM_HASH: 881772771:AAHIZ_8fC9bO3_F4wo1UeP-c-JZuIDB0qOk
+    TIMEOUT: 20000
     ITINERARY_TYPES: Histórico,Desbravador,Gastronômico
   iamRoleStatements:
   - Effect: Allow
