Add google home fulfillment and smart speaker helper to further smart devices

--- a/src/functions.yml
+++ b/src/functions.yml
@@ -86,4 +86,14 @@ milia-signup:
     - http:
         path: /milia-signup 
         method: post
-        cors: true    
+        cors: true
+
+google-fulfillment:
+  functionName: ${self:service}-${self:provider.stage}-google-fulfillment
+  handler: src/handlers/googleFulfillment.fulfillment
+  warmup: true
+  events:
+    - http:
+        path: /google-fulfillment
+        method: post
+        cors: true              
