--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^4.1.3",
+    "actions-on-google": "^2.12.0",
     "aws-sdk": "^2.507.0",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
